<resources>
    <string name="app_name">MenuDemo</string>

    <string name="file">文件</string>


    <string name="create_new">新建</string>

    <string name="open">打开</string>

    <string name="close">关闭</string>

    <string name="item1">item1</string>

    <string name="item2">item2</string>


    <string name="group_item1">group_item1</string>

    <string name="group_item2">group_item2</string>

    <string name="submenu_title">submenu_title</string>

    <string name="submenu_title2">submenu_title2</string>


    <string name="submenu_item1">submenu_item1</string>

    <string name="submenu_item2">submenu_item2</string>

    <string name="start">开始</string>

    <string name="pause">暂停</string>

    <string name="resume">resume</string>


    <string name="over">结束</string>


</resources>
