<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/file"
        android:title="@string/file"
        android:icon="@drawable/acfun_tv"
        app:showAsAction="ifRoom">
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/create_new"
                android:icon="@drawable/aiku_me"
                android:title="@string/create_new" />
            <item android:id="@+id/open"
                android:title="@string/open"
                android:icon="@drawable/aim"/>

            <item android:id="@+id/close"
                android:icon="@drawable/alibabai"
                android:title="@string/close" />
        </menu>
    </item>

    <item android:id="@+id/zhifubaoId"
        android:title="@string/item1"
        android:icon="@drawable/alibabai_alipay"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/app_store_iphone_id"
        android:title="@string/submenu_title2"
        android:icon="@drawable/app_store_iphone"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/submenu_item2"
                android:title="@string/submenu_item2"
                android:icon="@drawable/apple"/>
        </menu>
    </item>

    <item android:id="@+id/submenu"
        android:title="@string/submenu_title"
        android:icon="@drawable/ameba"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/submenu_item1"
                android:title="@string/submenu_item1"
                android:icon="@drawable/android"/>
        </menu>
    </item>
    <item android:id="@+id/group_item1"
        android:onClick="onGroupItemClick"
        android:title="@string/group_item1"
        android:icon="@drawable/alibabai_aliyun"
        app:showAsAction="ifRoom"/>



</menu>
