<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/start"/>

    <item
        android:id="@+id/pause"
        android:orderInCategory="110"
        app:showAsAction="always"
        android:title="@string/pause"/>

    <item
        android:id="@+id/resume"
        android:orderInCategory="120"
        app:showAsAction="withText"
        android:title="@string/resume"
        android:icon="@drawable/delicious"/>

    <item
        android:id="@+id/over"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/over"/>

</menu>