<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/appsGroup"
        android:checkableBehavior="all"
        android:visible="true"
        android:enabled="true"
        android:menuCategory="system"
        >
        <item
            android:id="@+id/appItem1"
            android:title="appItem1"
            android:icon="@drawable/cnblogs"
            android:checkable="true"
            android:enabled="true"
            android:orderInCategory="2"
            app:showAsAction="never">
        </item>
        <item
            android:id="@+id/appItem2"
            android:title="appItem2"
            android:icon="@drawable/codepen"
            android:checkable="true"
            android:enabled="true"
            android:orderInCategory="3"
            app:showAsAction="never">
        </item>
        <item
            android:id="@+id/appItem3"
            android:title="appItem3"
            android:icon="@drawable/coding_net"
            android:checkable="true"
            android:enabled="true"
            android:orderInCategory="1"
            app:showAsAction="never">
        </item>
    </group>

    <item android:id="@+id/context_menu_item1"
        android:title="context_menu_item1"
        android:icon="@drawable/alibabai_aliyun"
        app:showAsAction="never"/>

    <item android:id="@+id/context_menu_submenu"
        android:title="@string/submenu_title"
        android:icon="@drawable/ameba"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/submenu_item1"
                android:title="@string/submenu_item1"
                android:icon="@drawable/android"/>

            <item android:id="@+id/submenu_item2"
                android:title="@string/submenu_item2"
                android:icon="@drawable/evernote"/>
        </menu>
    </item>

</menu>